most of the front end function is there. it doesn't actually set alarms though.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Alarms</string>
     <string name="action_settings">Settings</string>
+
+    <string name="title_activity_alarm">Alarm</string>
+    <string name="end_alarm">Stop Alarm</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
