--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
 
     <string name="title_activity_alarm">Alarm</string>
     <string name="end_alarm">Stop Alarm</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="songPickerSubmit">Submit</string>
+    <string name="songPickerCancel">Cancel</string>
+    <string name="song_picker_title">Pick a Song</string>
 </resources>
