--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="songPickerSubmit">Submit</string>
     <string name="songPickerCancel">Cancel</string>
     <string name="song_picker_title">Pick a Song</string>
+    <string name="save_btn">Save</string>
+    <string name="cancel_btn">Cancel</string>
 </resources>
